--- a/assets/css/milkdown.css
+++ b/assets/css/milkdown.css
@@ -1,13 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @font-face {
   font-family: "MilkdownIcons";
-  src: url("~/assets/fonts/MilkdownIcons.eot?jhilie");
-  src: url("~/assets/fonts/MilkdownIcons.eot?jhilie#iefix") format("embedded-opentype"),
-    url("~/assets/fonts/MilkdownIcons.ttf?jhilie") format("truetype"), url("~/assets/fonts/MilkdownIcons.woff?jhilie") format("woff"),
-    url("~/assets/fonts/MilkdownIcons.svg?jhilie#MilkdownIcons") format("svg");
+  src: url("~/assets/fonts/milkdown/MilkdownIcons.eot?yvpih5");
+  src: url("~/assets/fonts/milkdown/MilkdownIcons.eot?yvpih5#iefix") format("embedded-opentype"),
+    url("~/assets/fonts/milkdown/MilkdownIcons.ttf?yvpih5") format("truetype"), url("~/assets/fonts/milkdown/MilkdownIcons.woff?yvpih5") format("woff"),
+    url("~/assets/fonts/milkdown/MilkdownIcons.svg?yvpih5#MilkdownIcons") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -16,6 +12,7 @@
 .milkdown-icons {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "MilkdownIcons" !important;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -39,12 +36,18 @@
 .icon-task:before {
   content: "\e903";
 }
-.icon-text-bold:before {
+.icon-task-dots:before {
   content: "\e904";
 }
-.icon-text-italic:before {
+.icon-task-numbered:before {
   content: "\e905";
 }
-.icon-text-underline:before {
+.icon-text-bold:before {
   content: "\e906";
+}
+.icon-text-italic:before {
+  content: "\e907";
+}
+.icon-text-underline:before {
+  content: "\e908";
 }
