--- a/assets/css/milkdown.css
+++ b/assets/css/milkdown.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'MilkdownIcons';
-  src:  url('~/assets/fonts/milkdown/MilkdownIcons.eot?ehy25x');
-  src:  url('~/assets/fonts/milkdown/MilkdownIcons.eot?ehy25x#iefix') format('embedded-opentype'),
-    url('~/assets/fonts/milkdown/MilkdownIcons.ttf?ehy25x') format('truetype'),
-    url('~/assets/fonts/milkdown/MilkdownIcons.woff?ehy25x') format('woff'),
-    url('~/assets/fonts/milkdown/MilkdownIcons.svg?ehy25x#MilkdownIcons') format('svg');
+  font-family: "MilkdownIcons";
+  src: url("~/assets/fonts/milkdown/MilkdownIcons.eot?5khdzo");
+  src: url("~/assets/fonts/milkdown/MilkdownIcons.eot?5khdzo#iefix") format("embedded-opentype"),
+    url("~/assets/fonts/milkdown/MilkdownIcons.ttf?5khdzo") format("truetype"),
+    url("~/assets/fonts/milkdown/MilkdownIcons.woff?5khdzo") format("woff"),
+    url("~/assets/fonts/milkdown/MilkdownIcons.svg?5khdzo#MilkdownIcons") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -12,7 +12,7 @@
 
 .milkdown-icons {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'MilkdownIcons' !important;
+  font-family: "MilkdownIcons" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-hierarchy:before {
+  content: "\e90c";
+}
+.icon-image:before {
+  content: "\e90b";
+}
 .icon-code-1:before {
   content: "\e900";
 }
