fix: video in editor working properly

--- a/assets/css/milkdown.css
+++ b/assets/css/milkdown.css
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-math:before {
+  content: "\e90e";
+}
 .icon-dots:before {
   content: "\e902";
 }
