feat: video chip in the markdown editor

--- a/assets/css/milkdown.css
+++ b/assets/css/milkdown.css
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-video-play:before {
+  content: "\e90f";
+}
 .icon-math:before {
   content: "\e90e";
 }
