--- a/assets/css/milkdown.css
+++ b/assets/css/milkdown.css
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-category:before {
+  content: "\e912";
+}
+.icon-quote-down:before {
+  content: "\e911";
+}
 .icon-text:before {
   content: "\e910";
 }
